Alterando a versão do foundation para uma compativel com angular

--- a/mechpy/core/static/app/conta/views/dados-perfil.html
+++ b/mechpy/core/static/app/conta/views/dados-perfil.html
@@ -1,14 +1,14 @@
-<div class="panel sublevel-2">
+<div class="panel">
   <h3>Perfil</h3>
-  <form name="loginForm" ng-submit="login.doLogin()" ng-hide="">
-     <div class="row">
-       <div class="large columns">
-           <input type="text" name="username" ng-model="login.username" placeholder="Username" readonly="readonly" />
+  <form>
+     <div>
+       <div>
+           <input type="text" name="username" ng-model="dados.username" placeholder="Username" readonly="readonly" />
        </div>
      </div>
-    <div class="row">
-       <div class="large columns">
-           <input type="email" name="email" ng-model="login.email" placeholder="Email" readonly="readonly" />
+    <div>
+       <div>
+           <input type="email" name="email" ng-model="dados.email" placeholder="Email" readonly="readonly" />
        </div>
     </div>
   </form>
