--- a/mechpy/core/static/app/conta/views/login-form.html
+++ b/mechpy/core/static/app/conta/views/login-form.html
@@ -1,14 +1,14 @@
 <div class="panel sublevel-2">
   <h3>Login</h3>
-  <form name="loginForm" ng-submit="login.doLogin()" ng-hide="">
+  <form name="loginForm" ng-submit="doLogin()" ng-hide="">
      <div class="row">
        <div class="large columns">
-           <input type="text" name="username" ng-model="login.username" placeholder="Username" />
+           <input type="text" name="username" ng-model="username" placeholder="Username" />
        </div>
      </div>
     <div class="row">
        <div class="large columns">
-           <input type="password" name="password" ng-model="login.password" placeholder="Password" />
+           <input type="password" name="password" ng-model="password" placeholder="Password" />
        </div>
     </div>
     <div class="row">
