--- a/mechpy/core/static/app/conta/views/menu-esquerdo.html
+++ b/mechpy/core/static/app/conta/views/menu-esquerdo.html
@@ -1,70 +1,22 @@
 
   <div class="my-left-menu">
     <dados-perfil></dados-perfil>
-      <ul class="vertical accordion-menu menu" data-accordion-menu>
-          <li> <a href="#">Item 1</a>
-              <ul class="menu vertical sublevel-1">
-                  <li> <a href="#">Sub-item 1</a>
-                      <ul class="menu vertical sublevel-2">
-                          <li><a class="subitem" href="#">Thing 1</a>
-                          </li>
-                          <li><a class="subitem" href="#">Thing 2</a>
-                          </li>
-                          <li><a class="subitem" href="#">Thing 3</a>
-                          </li>
-                      </ul>
-                  </li>
-                  <li> <a href="#">Sub-item 2</a>
-                      <ul class="menu vertical sublevel-2">
-                          <li> <a href="#">Super-sub-item 1</a>
-                              <ul class="menu vertical sublevel-3">
-                                  <li><a class="subitem" href="#">Thing 1</a>
-                                  </li>
-                                  <li><a class="subitem" href="#">Thing 2</a>
-                                  </li>
-                              </ul>
-                          </li>
-                          <li><a class="subitem" href="#">Thing 2</a>
-                          </li>
-                      </ul>
-                  </li>
-                  <li><a class="subitem" href="#">Thing 1</a>
-                  </li>
-                  <li><a class="subitem" href="#">Thing 2</a>
-                  </li>
-              </ul>
-          </li>
-          <li> <a href="#">Item 2</a>
-              <ul class="menu vertical sublevel-1">
-                  <li><a class="subitem" href="#">Thing 1</a>
-                  </li>
-                  <li><a class="subitem" href="#">Thing 2</a>
-                  </li>
-              </ul>
-          </li>
-          <li> <a href="#">Item 3</a>
-              <ul class="menu vertical sublevel-1">
-                  <li><a class="subitem" href="#">Thing 1</a>
-                  </li>
-                  <li><a class="subitem" href="#">Thing 2</a>
-                  </li>
-              </ul>
-          </li>
-          <li> <a href="#">Item 4</a>
-              <ul class="menu vertical sublevel-1">
-                  <li> <a href="#">Sub-item 3</a>
-                      <ul class="menu vertical sublevel-2">
-                          <li><a class="subitem" href="#">Thing 1</a>
-                          </li>
-                          <li><a class="subitem" href="#">Thing 2</a>
-                          </li>
-                      </ul>
-                  </li>
-                  <li><a class="subitem" href="#">Thing 1</a>
-                  </li>
-                  <li><a class="subitem" href="#">Thing 2</a>
-                  </li>
-              </ul>
-          </li>
-      </ul>
+    <accordion close-others="false">
+      <accordion-group heading="Item 1 " is-open="item1">
+        <accordion-heading>
+              Item 1
+              <i ng-class="{'fa fa-chevron-down': item1, 'fa fa-chevron-right': !item1}"></i>
+        </accordion-heading>
+        <a href="#">
+          Botão 1 <i class="fa fa-download"></i>
+        </a>
+      </accordion-group>
+      <accordion-group is-open="item2">
+          <accordion-heading>
+              Item 2
+              <i ng-class="{'fa fa-chevron-down': item2, 'fa fa-chevron-right': !item2}"></i>
+          </accordion-heading>
+          <a href="#">This is just some content to illustrate fancy headings.</a>
+      </accordion-group>
+    </accordion>
   </div>
