--- a/mechpy/core/static/css/app.css
+++ b/mechpy/core/static/css/app.css
@@ -6,11 +6,16 @@
 .max-height {
     height: 100% !important;
 }
+.left-off-canvas-menu{
+  border-right: 5px dashed #333;
+}
 .my-left-menu{
     color: #fff !important;
 }
-.js-off-canvas-exit{
+.exit-off-canvas{
   z-index: -999 !important;
+  background: none !important;
+  position: relative !important;
 }
 .my-left-menu ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    #777;
@@ -26,103 +31,28 @@
 .my-left-menu :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color:    #777;
 }
-
-.js-off-canvas-exit{ background: none !important; }
 .content-menu{
     height: 100%;
     background:#4d5158 none repeat scroll 0 0;
 }
 
-.is-accordion-submenu-parent a {
+.accordion a{
+  color: #fff !important;
+  width: 100%;
+}
 
-  background: #4d5158; }
+.accordion .accordion-navigation > a,
+.accordion dd > a, 
+.accordion .accordion-navigation > .content.active, 
+.accordion dd > .content.active{
+ color: #fff !important;
+ background:#4d5158 none repeat scroll 0 0 !important;
+}
 
-
-
-.is-accordion-submenu a {
-
-  background: #35383d; }
-
-
-
-[data-accordion-menu] .is-accordion-submenu-parent[aria-expanded="true"] a.subitem::before {
-
-  content: "\f016";
-
-  font-family: FontAwesome;
-
-  margin-right: 1rem; }
-
-
-
-[data-accordion-menu] .is-accordion-submenu-parent[aria-expanded="true"] a::before {
-
-  content: "\f07c";
-
-  font-family: FontAwesome;
-
-  margin-right: 1rem; }
-
-
-
-[data-accordion-menu] .is-accordion-submenu-parent[aria-expanded="false"] a::before {
-
-  content: "\f07b";
-
-  font-family: FontAwesome;
-
-  margin-right: 1rem; }
-
-
-
-.sublevel-1 {
-
-  text-indent: 1rem; }
-
-
-
-.sublevel-2 {
-
-  text-indent: 2rem; }
-
-
-
-.sublevel-3 {
-
-  text-indent: 3rem; }
-
-
-
-.sublevel-4 {
-
-  text-indent: 4rem; }
-
-
-
-.sublevel-5 {
-
-  text-indent: 5rem; }
-
-
-
-.sublevel-6 {
-
-  text-indent: 6rem; }
-
-
-
-[data-accordion-menu] a {
-
-  color: #fff;
-
-  box-shadow: inset 0 -1px #41444a; }
-
-  [data-accordion-menu] a::after {
-
-    border-color: #fff transparent transparent; }
-
-
-
-.menu > li:not(.menu-text) > a {
-
-  padding: 1.2rem 1rem; }
+.accordion .accordion-navigation > a:hover,
+.accordion dd > a:hover, 
+.accordion .accordion-navigation > .content.active:hover, 
+.accordion dd > .content.active:hover{
+  color: #ccc !important;
+  background:#333 none repeat scroll 0 0 !important;
+}
