Atualizando login e logout no client

--- a/mechpy/core/static/app/conta/views/dados-perfil.html
+++ b/mechpy/core/static/app/conta/views/dados-perfil.html
@@ -11,5 +11,6 @@
            <input type="email" name="email" ng-model="dados.email" placeholder="Email" readonly="readonly" />
        </div>
     </div>
+    <a href="#" ng-click="dados.logout()" class="button alert expand">Logout</a>
   </form>
 </div>
