--- a/mechpy/core/static/app/conta/views/login-form.html
+++ b/mechpy/core/static/app/conta/views/login-form.html
@@ -1,6 +1,9 @@
 <div class="panel sublevel-2">
   <h3>Login</h3>
   <form name="loginForm" ng-submit="doLogin()" ng-hide="">
+    <alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">
+      ({ alert.msg })
+    </alert>
      <div class="row">
        <div class="large columns">
            <input type="text" name="username" ng-model="username" placeholder="Username" />
@@ -13,7 +16,7 @@
     </div>
     <div class="row">
       <div class="large columns">
-        <input type="submit" class="expanded button" value="Log In"/>
+        <input type="submit" class="expand button" value="Log In"/>
       </div>
     </div>
   </form>
