--- a/mechpy/core/static/app/core/views/pessoa.html
+++ b/mechpy/core/static/app/core/views/pessoa.html
@@ -1,4 +1,5 @@
 <form ng-controller="PessoaController">
+{{ entidadeId }}
   <div class="row">
     <div class="large-12 columns">
       <label>{{ valor }}
