--- a/mechpy/core/templates/index.html
+++ b/mechpy/core/templates/index.html
@@ -33,6 +33,7 @@
       <script src="{% static 'app/conta/app-components.js' %}"></script>
 
       <script src="{% static 'app/core/app.js' %}"></script>
+      <script src="{% static 'app/core/app-service.js' %}"></script>
       <script src="{% static 'app/core/app-controller.js' %}"></script>
   </body>
 </html>
