--- a/mechpy/core/templates/index.html
+++ b/mechpy/core/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Mechpy</title>
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" href="{% static 'js/vendor/angular-1.5.6/angular-csp.css' %}" />
     <link rel="stylesheet" href="{% static 'css/foundation.css' %}">
