--- a/mechpy/core/static/app/core/views/pessoa.html
+++ b/mechpy/core/static/app/core/views/pessoa.html
@@ -1,43 +1,60 @@
 <form ng-controller="PessoaController">
-{{ entidadeId }}
+  <div class="row panel clearfix">
+    <h2 class="left">Listagem de Pessoas</h2>
+    
+    <a href="#/core/pessoa/" class="button success tiny right">
+      <i class="fa fa-floppy-o" aria-hidden="true"></i>
+      Salvar
+    </a>
+    <a href="#/core/pessoa-list/" class="button primary tiny right">
+      <i class="fa fa-times" aria-hidden="true"></i>
+      Voltar
+    </a>
+  </div>
   <div class="row">
-    <div class="large-12 columns">
-      <label>{{ valor }}
-        <input type="text" placeholder="large-12.columns" />
+    <div class="large-4 columns">
+      <label>Código
+        <input type="text" placeholder="Código" ng-model="pessoa.id" readonly="true" />
       </label>
     </div>
   </div>
   <div class="row">
-    <div class="large-4 columns">
-      <label>Input Label
-        <input type="text" placeholder="large-4.columns" />
+    <div class="large-12 columns">
+      <label>Nome
+        <input type="text" ng-model="pessoa.nome" placeholder="Nome" />
       </label>
-    </div>
-    <div class="large-4 columns">
-      <label>Input Label
-        <input type="text" placeholder="large-4.columns" />
-      </label>
-    </div>
-    <div class="large-4 columns">
-      <div class="row collapse">
-        <label>Input Label</label>
-        <div class="small-9 columns">
-          <input type="text" placeholder="small-9.columns" />
-        </div>
-        <div class="small-3 columns">
-          <span class="postfix">.com</span>
-        </div>
-      </div>
     </div>
   </div>
   <div class="row">
     <div class="large-12 columns">
-      <label>Select Box
-        <select>
-          <option value="husker">Husker</option>
-          <option value="starbuck">Starbuck</option>
-          <option value="hotdog">Hot Dog</option>
-          <option value="apollo">Apollo</option>
+      <label>E-mail
+        <input type="text" ng-model="pessoa.email" placeholder="E-mail" />
+      </label>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns">
+      <label>Observação
+        <textarea rows="4" ng-model="pessoa.observacao"></textarea>
+      </label>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-6 columns">
+      <label>Telefone
+        <input type="text" ng-model="pessoa.telefone" placeholder="Telefone" />
+      </label>
+    </div>
+    <div class="large-6 columns">
+      <label>Celular
+        <input type="text" ng-model="pessoa.celular" placeholder="Celular" />
+      </label>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns">
+      <label>Tipo
+        <select ng-model="pessoa.tipo" ng-options="item.id as item.name for item in tipos">
         </select>
       </label>
     </div>
@@ -59,6 +76,11 @@
       <label>Textarea Label
         <textarea placeholder="small-12.columns"></textarea>
       </label>
+    </div>
+  </div>
+  <div class="row">
+    <div class="large-12 columns">
+      &nbsp;
     </div>
   </div>
 </form>
