Atualizando o cadastro de pessoas

--- a/mechpy/core/static/app/conta/views/home.html
+++ b/mechpy/core/static/app/conta/views/home.html
@@ -20,7 +20,7 @@
                 <menu-esquerdo></menu-esquerdo>
             </aside>
             
-            <section>
+            <section class="conteudo">
                 <div ng-if="template_name" ng-include="template_name"></div>
             </section>
 
