Atualizando CSS para funcionar (apenas css3, but works)

--- a/mechpy/core/static/app/conta/views/home.html
+++ b/mechpy/core/static/app/conta/views/home.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="HomeController" class="page">
+<div ng-controller="HomeController">
     <div class="off-canvas-wrap">
         <div class="inner-wrap">
             <nav class="tab-bar">
