--- a/mechpy/core/static/css/app.css
+++ b/mechpy/core/static/css/app.css
@@ -1,21 +1,6 @@
 <!doctype html>
-body,html{
-    height:100%;
-    width:100%;
-}
-
-.off-canvas-wrap,.inner-wrap{
-    height:100%;   
-}
-body,html{
-    height:100%;
-    width:100%;
-}
-.off-canvas-wrap,.inner-wrap{
-    height:100%;   
-}
-.page{
-    height:100%;   
+.off-canvas-wrap, .off-canvas-wrap > .inner-wrap {
+  min-height: 100vh;
 }
 .conteudo{
   min-height: 600px;
