Atualizando validação do tipo de pessoa, falta validar os outros campos do formulário

--- a/mechpy/core/static/app/core/views/pessoa.html
+++ b/mechpy/core/static/app/core/views/pessoa.html
@@ -55,6 +55,7 @@
     <div class="large-12 columns">
       <label>Tipo
         <select ng-model="pessoa.tipo" ng-options="item.id as item.nome for item in tipos" required="required">
+          <option value="">Selecionar</option>
         </select>
       </label>
     </div>
