Ajustes no css para mostrar campos inválidos, falta mensagens sobre quais os erros nos campos

--- a/mechpy/core/static/app/conta/views/home.html
+++ b/mechpy/core/static/app/conta/views/home.html
@@ -21,6 +21,9 @@
             </aside>
             
             <section class="conteudo">
+                <alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">
+                  {{ alert.msg }}
+                </alert>
                 <div ng-if="template_name" ng-include="template_name"></div>
             </section>
 
