--- a/mechpy/core/static/app/core/views/pessoa.html
+++ b/mechpy/core/static/app/core/views/pessoa.html
@@ -2,7 +2,7 @@
   <div class="row panel clearfix">
     <h2 class="left">Listagem de Pessoas</h2>
     
-    <button type="submit" class="button success tiny right">
+    <button type="submit" class="button success tiny right" ng-disabled="formulario.$invalid" >
       <i class="fa fa-floppy-o" aria-hidden="true"></i>
       Salvar
     </button>
@@ -28,7 +28,7 @@
   <div class="row">
     <div class="large-12 columns">
       <label>E-mail
-        <input type="text" ng-model="pessoa.email" placeholder="E-mail" />
+        <input type="email" ng-model="pessoa.email" placeholder="E-mail" />
       </label>
     </div>
   </div>
@@ -138,7 +138,7 @@
           </td>
           <td>
             <span ng-show="edit[$index]">{{ contato.email }}</span>
-            <input ng-hide="edit[$index]" type="text" ng-model="contato.email" placeholder="E-mail" />
+            <input ng-hide="edit[$index]" type="email" ng-model="contato.email" placeholder="E-mail" />
           </td>
           <td>
             <span ng-show="edit[$index]">{{ contato.telefone }}</span>
