Atualizando css de tabelas para dispositivos móveis (verificar alternativa para as linhas de tabela editáveis, talves editar em campos separados)

--- a/mechpy/core/static/app/core/views/pessoa-list.html
+++ b/mechpy/core/static/app/core/views/pessoa-list.html
@@ -6,7 +6,7 @@
       Novo
     </a>
   </div>
-  <table class="max-width">
+  <table class="table-max">
     <thead>
       <tr>
         <th>Id</th>
