--- a/mechpy/core/static/app/core/views/pessoa.html
+++ b/mechpy/core/static/app/core/views/pessoa.html
@@ -120,7 +120,7 @@
         Novo
       </buttion>
     </div>
-    <table class="max-width">
+    <table class="table-max">
       <thead>
         <tr>
           <th>Nome</th>
