--- a/mechpy/core/static/css/app.css
+++ b/mechpy/core/static/css/app.css
@@ -1,4 +1,14 @@
-
+@media screen and (max-width: 640px) {
+  table {
+    overflow-x: auto;
+    display: block;
+  }
+}
+@media screen and (min-width: 640px) {
+  .table-max{
+    width: 100% !important;
+  }
+}
 input.ng-valid.ng-pristine,
 select.ng-valid.ng-pristine,
 textarea.ng-valid.ng-pristine{
